--- a/mod2_solution/stylesheets/style.css
+++ b/mod2_solution/stylesheets/style.css
@@ -9,8 +9,8 @@ body {
 
 h1 {
     text-align: center;
-    margin: 1.6em 0 1em;
-    font-size: 3em;
+    margin: 1.6em 0 .8em;
+    font-size: 175%;
 }
 
 .row {
@@ -34,7 +34,6 @@ h1 {
 }
 
 p {
-    font-size: 1.4em;
     margin: 0;
 }
 
@@ -60,14 +59,17 @@ p {
 }
 
 h2 {
-    font-size: 25px;
+    font-size: 125%;
     margin: 0;
     padding: .3em 0;
 }
 
 @media (min-width: 768px) and (max-width:991px) {
-    .row {
-        padding: 1.5em;
+
+    h1 {
+        text-align: center;
+        margin: 1.6em 0 .8em;
+        font-size: 175%;
     }
 
     .col-lg-4 {
@@ -90,7 +92,4 @@ h2 {
         padding: 0;
     }
 
-    .row {
-        padding: 1.5em;
-    }
 }
